--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
