Setup the Stocks data using vuex. Ended lecture 290.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
