--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.5",
     "vue": "^2.6.10",
+    "vue-currency-filter": "^3.4.2",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1"
   },
